<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/four"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/seven"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnClearAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/clear_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/btnDividedBy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_operation_press"
        android:text="@string/divide"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btnClearAll"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/eight"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/nine"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnTimes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_operation_press"
        android:text="@string/multiply"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/five"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/six"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_operation_press"
        android:text="@string/subtract"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/two"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/three"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDel"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_operation_press"
        android:text="@string/add"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/dot"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_press"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/effect_button_main_press"
        android:text="@string/equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/btnDel"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|end"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.115"
        app:layout_constraintStart_toEndOf="@+id/imgBtnMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|end"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnClearAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHistory" />

    <ImageButton
        android:id="@+id/imgBtnMenu"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu_main_36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>